iptables/matts-iptables.rules
# Generated by iptables-save v1.4.4 on Sun Sep 14 11:34:19 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [15906837:24978268083]
-A INPUT -p tcp -m tcp --dport 1880 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1881 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8081 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 6600 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 10122 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -m limit --limit 50/min --limit-burst 200 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1883 -j ACCEPT 
-A INPUT -s 194.168.8.100/32 -d 192.168.0.2/32 -p tcp -m tcp --sport 53 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 194.168.4.100/32 -d 192.168.0.2/32 -p tcp -m tcp --sport 53 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.0.1/32 -d 192.168.0.2/32 -p tcp -m tcp --sport 53 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 194.168.8.100/32 -d 192.168.0.2/32 -p udp -m udp --sport 53 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 194.168.4.100/32 -d 192.168.0.2/32 -p udp -m udp --sport 53 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.0.1/32 -d 192.168.0.2/32 -p udp -m udp --sport 53 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -j DROP 
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP 
-A INPUT -f -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP 
-A OUTPUT -d 192.168.0.1/32 -p udp -m udp --sport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 194.168.4.100/32 -p udp -m udp --sport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 194.168.8.100/32 -p udp -m udp --sport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 192.168.0.1/32 -p tcp -m tcp --sport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 194.168.4.100/32 -p tcp -m tcp --sport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 194.168.8.100/32 -p tcp -m tcp --sport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Sun Sep 14 11:34:19 2014
